--- a/computer.basic/原码 & 补码 & 反码.md
+++ b/computer.basic/原码 & 补码 & 反码.md
@@ -1,3 +1,20 @@
 ## 原码 & 补码 & 反码
 
-> https://blog.csdn.net/zl10086111/article/details/80907428?utm_medium=distribute.pc_relevant_t0.none-task-blog-BlogCommendFromMachineLearnPai2-1.nonecase&depth_1-utm_source=distribute.pc_relevant_t0.none-task-blog-BlogCommendFromMachineLearnPai2-1.nonecase
+> https://blog.csdn.net/zl10086111/article/details/80907428?utm_medium=distribute.pc_relevant_t0.none-task-blog-BlogCommendFromMachineLearnPai2-1.nonecase&depth_1-utm_source=distribute.pc_relevant_t0.none-task-blog-Blo#gCommendFromMachineLearnPai2-1.nonecase
+
+## 一、机器数 & 真值
+
+1.1 机器数
+
+​	一个数在计算机中的二进制表现形式即为这个数的机器数。
+
+​	机器数是带符号的，使用一个数的最高位存放符号：0表示正数，1表示负数。
+
+​	举例来说，在8位的计算机系统中，十进制的 +3 机器码为 0000 0011；而-3 则为 1000 0011 。
+
+1.2 真值
+
+​	因机器数的第一位表示数字符号，因此机器码的形式值并不等于真实的数值。如机器码为 1000 0011 表示的是 -3，而不是 131。
+
+
+
